--- a/app/src/main/res/layout/fragment_warranties.xml
+++ b/app/src/main/res/layout/fragment_warranties.xml
@@ -7,10 +7,10 @@
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
         style="@style/Theme.WarrantyRoster.Toolbar"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/width_0dp"
         android:layout_height="?attr/actionBarSize"
-        app:contentInsetEnd="12dp"
-        app:contentInsetStart="12dp"
+        app:contentInsetEnd="@dimen/content_inset_12dp"
+        app:contentInsetStart="@dimen/content_inset_12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
-            android:maxWidth="1000dp"
+            android:maxWidth="@dimen/max_width_1000dp"
             app:closeIcon="@drawable/ic_menu_close"
             app:queryHint="@string/warranties_menu_hint_search"
             app:searchIcon="@drawable/ic_menu_search" />
@@ -30,10 +30,10 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lav_empty_list"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_marginHorizontal="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="@dimen/width_250dp"
+        android:layout_height="@dimen/height_250dp"
+        android:layout_marginHorizontal="@dimen/margin_4dp"
+        android:layout_marginTop="@dimen/margin_4dp"
         app:layout_constraintBottom_toTopOf="@+id/tv_empty_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,16 +47,16 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_empty_list"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/width_0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="28sp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginHorizontal="@dimen/margin_28dp"
+        android:layout_marginBottom="@dimen/margin_60dp"
         android:fontFamily="@font/nunito_bold"
         android:gravity="center"
         android:text="@string/warranties_text_empty_list"
         android:textAlignment="gravity"
         android:textColor="@color/grayDark"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,16 +65,16 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_network_error"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/width_0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32sp"
-        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="@dimen/margin_32dp"
+        android:layout_marginTop="@dimen/margin_8dp"
         android:fontFamily="@font/nunito_semi_bold"
         android:gravity="center"
         android:text="@string/error_network_failure"
         android:textAlignment="gravity"
         android:textColor="@color/grayDark"
-        android:textSize="16sp"
+        android:textSize="@dimen/text_size_16sp"
         app:layout_constraintBottom_toTopOf="@+id/btn_network_retry"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,9 +87,9 @@
         style="@style/Theme.WarrantyRoster.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="27sp"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="3dp"
+        android:layout_marginHorizontal="@dimen/margin_27dp"
+        android:layout_marginTop="@dimen/margin_3dp"
+        android:layout_marginBottom="@dimen/margin_3dp"
         android:gravity="center"
         android:text="@string/error_btn_retry"
         android:textAlignment="gravity"
@@ -103,13 +103,13 @@
     <!--56dp bottom padding/margin for bottom appbar-->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="@dimen/width_0dp"
+        android:layout_height="@dimen/height_0dp"
+        android:layout_marginBottom="@dimen/margin_20dp"
         android:clipToPadding="false"
         android:overScrollMode="ifContentScrolls"
-        android:paddingTop="4dp"
-        android:paddingBottom="40dp"
+        android:paddingTop="@dimen/margin_4dp"
+        android:paddingBottom="@dimen/margin_40dp"
         android:scrollbars="none"
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
