--- a/app/src/main/res/layout/list_item_warranty.xml
+++ b/app/src/main/res/layout/list_item_warranty.xml
@@ -31,13 +31,13 @@
         android:id="@+id/cv_warranty"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="8dp"
-        android:layout_marginVertical="4dp"
+        android:layout_marginHorizontal="@dimen/margin_8dp"
+        android:layout_marginVertical="@dimen/margin_4dp"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
         app:cardBackgroundColor="@color/surface"
-        app:cardCornerRadius="12dp">
+        app:cardCornerRadius="@dimen/radius_12dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -45,13 +45,13 @@
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_icon"
-                android:layout_width="52dp"
-                android:layout_height="52dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="12dp"
+                android:layout_width="@dimen/width_52dp"
+                android:layout_height="@dimen/height_52dp"
+                android:layout_marginStart="@dimen/margin_12dp"
+                android:layout_marginTop="@dimen/margin_12dp"
+                android:layout_marginBottom="@dimen/margin_12dp"
                 android:background="@color/grayLight"
-                app:contentPadding="12dp"
+                app:contentPadding="@dimen/padding_12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -71,9 +71,9 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_title"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/width_0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp"
+                android:layout_marginHorizontal="@dimen/margin_12dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/nunito_bold"
                 android:gravity="center_vertical|start"
@@ -81,7 +81,7 @@
                 android:text="@{title}"
                 android:textAlignment="gravity"
                 android:textColor="@color/navyBlue"
-                android:textSize="16sp"
+                android:textSize="@dimen/text_size_16sp"
                 app:layout_constraintBottom_toTopOf="@+id/tv_expiry_date"
                 app:layout_constraintEnd_toStartOf="@id/tv_status"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -91,17 +91,17 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_expiry_date"
-                android:layout_width="0dp"
+                android:layout_width="@dimen/width_0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginHorizontal="@dimen/margin_12dp"
+                android:layout_marginTop="@dimen/margin_12dp"
                 android:fontFamily="@font/nunito_regular"
                 android:gravity="center_vertical|start"
                 android:maxLines="1"
                 android:text="@{expiryDate}"
                 android:textAlignment="gravity"
                 android:textColor="@color/grayDark"
-                android:textSize="12sp"
+                android:textSize="@dimen/text_size_12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tv_category"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -112,7 +112,7 @@
                 android:id="@+id/tv_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="2dp"
+                android:layout_marginEnd="@dimen/margin_2dp"
                 android:fontFamily="@font/nunito_black"
                 android:gravity="center"
                 android:maxLines="1"
@@ -120,7 +120,7 @@
                 android:textAlignment="gravity"
                 android:textAllCaps="true"
                 android:textColor="@{statusColor}"
-                android:textSize="10sp"
+                android:textSize="@dimen/text_size_10sp"
                 app:layout_constraintBottom_toTopOf="@+id/tv_category"
                 app:layout_constraintEnd_toStartOf="@+id/fl_status"
                 app:layout_constraintTop_toTopOf="parent"
@@ -130,9 +130,9 @@
 
             <FrameLayout
                 android:id="@+id/fl_status"
-                android:layout_width="4dp"
-                android:layout_height="4dp"
-                android:layout_marginEnd="12dp"
+                android:layout_width="@dimen/width_14dp"
+                android:layout_height="@dimen/height_14dp"
+                android:layout_marginEnd="@dimen/margin_12dp"
                 android:background="@drawable/shape_circle"
                 android:backgroundTint="@{statusColor}"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_status"
@@ -143,15 +143,15 @@
                 android:id="@+id/tv_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginTop="@dimen/margin_12dp"
+                android:layout_marginEnd="@dimen/margin_12dp"
                 android:fontFamily="@font/nunito_extra_light"
                 android:gravity="center_vertical|end"
                 android:maxLines="1"
                 android:text="@{categoryTitle}"
                 android:textAlignment="gravity"
                 android:textColor="@color/grayDark"
-                android:textSize="10sp"
+                android:textSize="@dimen/text_size_10sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_status"
