--- a/app/src/main/res/layout/fragment_forgot_pw_sent.xml
+++ b/app/src/main/res/layout/fragment_forgot_pw_sent.xml
@@ -7,7 +7,7 @@
     android:fillViewport="true"
     android:orientation="vertical"
     android:overScrollMode="never"
-    android:paddingTop="12dp"
+    android:paddingTop="@dimen/padding_12dp"
     android:scrollbars="none">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,16 +18,16 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_description"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="24dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginHorizontal="@dimen/margin_24dp"
+            android:layout_marginTop="@dimen/margin_32dp"
             android:fontFamily="@font/nunito_extra_bold"
             android:gravity="start|center_vertical"
             android:text="@string/forgot_pw_sent_text_description"
             android:textAlignment="gravity"
             android:textColor="@color/black"
-            android:textSize="24sp"
+            android:textSize="@dimen/text_size_24sp"
             app:layout_constraintBottom_toTopOf="@+id/lav_sent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,10 +37,10 @@
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lav_sent"
-            android:layout_width="250dp"
-            android:layout_height="250dp"
-            android:layout_marginHorizontal="4dp"
-            android:layout_marginTop="44dp"
+            android:layout_width="@dimen/width_250dp"
+            android:layout_height="@dimen/height_250dp"
+            android:layout_marginHorizontal="@dimen/margin_4dp"
+            android:layout_marginTop="@dimen/margin_44dp"
             app:layout_constraintBottom_toTopOf="@+id/tv_resend"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,15 +52,15 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_resend"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="4dp"
+            android:layout_marginHorizontal="@dimen/margin_4dp"
             android:fontFamily="@font/nunito_semi_bold"
             android:gravity="center"
             android:text="@string/forgot_pw_sent_text_resend"
             android:textAlignment="gravity"
             android:textColor="@color/grayDark"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_size_16sp"
             app:layout_constraintBottom_toTopOf="@+id/btn_resend"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -71,13 +71,13 @@
             style="@style/Theme.WarrantyRoster.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="4dp"
-            android:layout_marginTop="3dp"
+            android:layout_marginHorizontal="@dimen/margin_4dp"
+            android:layout_marginTop="@dimen/margin_3dp"
             android:gravity="center"
             android:text="@string/forgot_pw_sent_btn_resend"
             android:textAlignment="gravity"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_size_16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -88,7 +88,7 @@
             style="@style/Theme.WarrantyRoster.LoadingProgressBar.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="4dp"
+            android:layout_marginHorizontal="@dimen/margin_4dp"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -96,15 +96,15 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_resent"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/width_0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="4dp"
+            android:layout_marginHorizontal="@dimen/margin_4dp"
             android:fontFamily="@font/nunito_semi_bold"
             android:gravity="center"
             android:text="@string/forgot_pw_sent_text_resent"
             android:textAlignment="gravity"
             android:textColor="@color/black"
-            android:textSize="16sp"
+            android:textSize="@dimen/text_size_16sp"
             app:layout_constraintBottom_toTopOf="@+id/tv_timer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -114,15 +114,15 @@
             android:id="@+id/tv_timer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="4dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginHorizontal="@dimen/margin_4dp"
+            android:layout_marginTop="@dimen/margin_4dp"
             android:fontFamily="@font/nunito_regular"
             android:gravity="center"
             android:maxLines="1"
             android:text="(01:58)"
             android:textAlignment="gravity"
             android:textColor="@color/green"
-            android:textSize="14sp"
+            android:textSize="@dimen/text_size_14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -134,9 +134,9 @@
             style="@style/Theme.WarrantyRoster.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="4dp"
-            android:layout_marginTop="34dp"
-            android:layout_marginBottom="19dp"
+            android:layout_marginHorizontal="@dimen/margin_4dp"
+            android:layout_marginTop="@dimen/margin_34dp"
+            android:layout_marginBottom="@dimen/margin_19dp"
             android:gravity="center"
             android:text="@string/forgot_pw_btn_return"
             android:textAlignment="gravity"
@@ -147,7 +147,7 @@
             app:layout_constraintTop_toBottomOf="@+id/btn_resend"
             app:layout_constraintVertical_bias="1"
             app:layout_constraintVertical_chainStyle="spread"
-            app:layout_goneMarginTop="79dp" />
+            app:layout_goneMarginTop="@dimen/margin_79dp" />
 
         <androidx.constraintlayout.widget.Group
             android:id="@+id/group_resend"
