--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -49,11 +49,11 @@
     <style name="Theme.WarrantyRoster.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="hintEnabled">false</item>
         <item name="boxBackgroundColor">@color/grayLight</item>
-        <item name="boxCornerRadiusBottomEnd">12dp</item>
-        <item name="boxCornerRadiusBottomStart">12dp</item>
-        <item name="boxCornerRadiusTopEnd">12dp</item>
-        <item name="boxCornerRadiusTopStart">12dp</item>
-        <item name="boxStrokeWidth">2dp</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/radius_12dp</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/radius_12dp</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/radius_12dp</item>
+        <item name="boxCornerRadiusTopStart">@dimen/radius_12dp</item>
+        <item name="boxStrokeWidth">@dimen/width_2dp</item>
         <item name="boxStrokeColor">@color/color_stroke_input</item>
         <item name="boxStrokeErrorColor">@color/red</item>
         <item name="errorTextColor">@color/red</item>
@@ -66,110 +66,110 @@
     <style name="Theme.WarrantyRoster.TextInputLayout.Dropdown" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
         <item name="hintEnabled">false</item>
         <item name="boxBackgroundColor">@color/grayLight</item>
-        <item name="boxCornerRadiusBottomEnd">12dp</item>
-        <item name="boxCornerRadiusBottomStart">12dp</item>
-        <item name="boxCornerRadiusTopEnd">12dp</item>
-        <item name="boxCornerRadiusTopStart">12dp</item>
-        <item name="boxStrokeWidth">2dp</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/radius_12dp</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/radius_12dp</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/radius_12dp</item>
+        <item name="boxCornerRadiusTopStart">@dimen/radius_12dp</item>
+        <item name="boxStrokeWidth">@dimen/width_2dp</item>
         <item name="boxStrokeColor">@color/color_stroke_input</item>
         <item name="boxStrokeErrorColor">@color/red</item>
     </style>
 
     <style name="Theme.WarrantyRoster.TextInputLayout.Error" parent="Widget.MaterialComponents.TextView">
         <item name="android:fontFamily">@font/nunito_semi_bold</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">@dimen/text_size_12sp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.TextInputLayout.Helper" parent="Widget.MaterialComponents.TextView">
         <item name="android:fontFamily">@font/nunito_semi_bold</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">@dimen/text_size_12sp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.CheckBox" parent="Widget.AppCompat.CompoundButton.CheckBox">
-        <item name="android:minWidth">0dp</item>
-        <item name="android:minHeight">0dp</item>
+        <item name="android:minWidth">@dimen/min_width_0dp</item>
+        <item name="android:minHeight">@dimen/min_height_0dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.LoadingProgressBar" parent="Widget.MaterialComponents.CircularProgressIndicator">
         <item name="android:indeterminate">true</item>
         <item name="indicatorColor">@color/grayMedium</item>
-        <item name="trackCornerRadius">12dp</item>
+        <item name="trackCornerRadius">@dimen/radius_12dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.LoadingProgressBar.Category" parent="Widget.MaterialComponents.CircularProgressIndicator.Small">
         <item name="android:indeterminate">true</item>
         <item name="indicatorColor">@color/grayMedium</item>
-        <item name="trackCornerRadius">12dp</item>
+        <item name="trackCornerRadius">@dimen/radius_12dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.LoadingProgressBar.TextButton" parent="Widget.MaterialComponents.CircularProgressIndicator.Small">
         <item name="android:indeterminate">true</item>
         <item name="indicatorColor">@color/grayMedium</item>
-        <item name="trackCornerRadius">12dp</item>
+        <item name="trackCornerRadius">@dimen/radius_12dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.LoadingProgressBar.Button" parent="Widget.MaterialComponents.CircularProgressIndicator.Small">
         <item name="android:indeterminate">true</item>
         <item name="indicatorColor">@color/whiteConstant</item>
-        <item name="trackCornerRadius">12dp</item>
+        <item name="trackCornerRadius">@dimen/radius_12dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.LoadingProgressBar.Toolbar" parent="Widget.MaterialComponents.CircularProgressIndicator.Small">
         <item name="android:indeterminate">true</item>
         <item name="indicatorColor">@color/black</item>
-        <item name="trackCornerRadius">12dp</item>
+        <item name="trackCornerRadius">@dimen/radius_12dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.LoadingProgressBar.Verification" parent="Widget.MaterialComponents.CircularProgressIndicator.Small">
         <item name="android:indeterminate">true</item>
         <item name="indicatorColor">@color/navyBlue</item>
-        <item name="trackCornerRadius">12dp</item>
-        <item name="trackThickness">2dp</item>
+        <item name="trackCornerRadius">@dimen/radius_12dp</item>
+        <item name="trackThickness">@dimen/width_2dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.Button" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.Button.Appearance</item>
         <item name="android:textColor">@color/whiteConstant</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/text_size_16sp</item>
         <item name="android:fontFamily">@font/nunito_bold</item>
         <item name="textAllCaps">false</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:padding">16dp</item>
+        <item name="android:padding">@dimen/padding_16dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.Button.Settings" parent="Widget.MaterialComponents.Button.UnelevatedButton">
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.Button.Appearance</item>
         <item name="backgroundTint">@color/red10</item>
         <item name="android:textColor">@color/red</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">@dimen/text_size_16sp</item>
         <item name="android:fontFamily">@font/nunito_bold</item>
         <item name="textAllCaps">true</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:padding">16dp</item>
+        <item name="android:padding">@dimen/padding_16dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.Button.Appearance">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">12dp</item>
+        <item name="cornerSize">@dimen/radius_12dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.TextButton" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.TextButton.Appearance</item>
         <item name="android:textColor">@color/blue</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/text_size_14sp</item>
         <item name="android:fontFamily">@font/nunito_bold</item>
         <item name="textAllCaps">false</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:insetLeft">0dp</item>
-        <item name="android:insetTop">0dp</item>
-        <item name="android:insetRight">0dp</item>
-        <item name="android:insetBottom">0dp</item>
-        <item name="android:minWidth">0dp</item>
-        <item name="android:minHeight">0dp</item>
-        <item name="android:padding">5dp</item>
+        <item name="android:insetLeft">@dimen/content_inset_0dp</item>
+        <item name="android:insetTop">@dimen/content_inset_0dp</item>
+        <item name="android:insetRight">@dimen/content_inset_0dp</item>
+        <item name="android:insetBottom">@dimen/content_inset_0dp</item>
+        <item name="android:minWidth">@dimen/min_width_0dp</item>
+        <item name="android:minHeight">@dimen/min_height_0dp</item>
+        <item name="android:padding">@dimen/padding_5dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.TextButton.Settings" parent="Widget.MaterialComponents.Button.TextButton">
@@ -182,49 +182,49 @@
         <item name="android:letterSpacing">0</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:insetLeft">0dp</item>
-        <item name="android:insetTop">0dp</item>
-        <item name="android:insetRight">0dp</item>
-        <item name="android:insetBottom">0dp</item>
-        <item name="android:minWidth">0dp</item>
-        <item name="android:minHeight">0dp</item>
-        <item name="android:paddingTop">4dp</item>
-        <item name="android:paddingBottom">4dp</item>
-        <item name="android:paddingStart">8dp</item>
-        <item name="android:paddingEnd">8dp</item>
+        <item name="android:insetLeft">@dimen/content_inset_0dp</item>
+        <item name="android:insetTop">@dimen/content_inset_0dp</item>
+        <item name="android:insetRight">@dimen/content_inset_0dp</item>
+        <item name="android:insetBottom">@dimen/content_inset_0dp</item>
+        <item name="android:minWidth">@dimen/min_width_0dp</item>
+        <item name="android:minHeight">@dimen/min_height_0dp</item>
+        <item name="android:paddingTop">@dimen/padding_4dp</item>
+        <item name="android:paddingBottom">@dimen/padding_4dp</item>
+        <item name="android:paddingStart">@dimen/padding_8dp</item>
+        <item name="android:paddingEnd">@dimen/padding_8dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.TextButton.Appearance">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">4dp</item>
+        <item name="cornerSize">@dimen/radius_4dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.BottomNavigationView.Text" parent="Widget.MaterialComponents.TextView">
         <item name="android:fontFamily">@font/nunito_regular</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">@dimen/text_size_12sp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.Toolbar" parent="Widget.MaterialComponents.Toolbar">
         <item name="titleTextAppearance">@style/Theme.WarrantyRoster.Toolbar.Title</item>
         <item name="android:background">@color/surface</item>
-        <item name="android:elevation">3dp</item>
+        <item name="android:elevation">@dimen/elevation_3dp</item>
         <item name="titleCentered">true</item>
     </style>
 
     <style name="Theme.WarrantyRoster.Toolbar.Title" parent="Widget.MaterialComponents.TextView">
         <item name="android:fontFamily">@font/nunito_extra_bold</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">@dimen/text_size_20sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Theme.WarrantyRoster.ImageViewShapeAppearance">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">12dp</item>
+        <item name="cornerSize">@dimen/radius_12dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.ImageViewShapeAppearance.Settings">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">8dp</item>
+        <item name="cornerSize">@dimen/radius_8dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.AlertDialog" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
@@ -250,53 +250,53 @@
 
     <style name="Theme.WarrantyRoster.AlertDialog.Appearance">
         <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">12dp</item>
+        <item name="cornerSize">@dimen/radius_12dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.AlertDialog.Title" parent="MaterialAlertDialog.MaterialComponents.Title.Text">
         <item name="android:textColor">@color/navyBlue</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">@dimen/text_size_20sp</item>
         <item name="android:fontFamily">@font/nunito_extra_bold</item>
     </style>
 
     <style name="Theme.WarrantyRoster.AlertDialog.Body" parent="Widget.MaterialComponents.TextView">
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/text_size_14sp</item>
         <item name="android:fontFamily">@font/nunito_regular</item>
     </style>
 
     <style name="Theme.WarrantyRoster.AlertDialog.Choice" parent="Widget.MaterialComponents.CheckedTextView">
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/text_size_14sp</item>
         <item name="android:fontFamily">@font/nunito_regular</item>
     </style>
 
     <style name="Theme.WarrantyRoster.AlertDialog.PositiveButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.TextButton.Appearance</item>
         <item name="android:textColor">@color/dialogButton</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/text_size_14sp</item>
         <item name="android:fontFamily">@font/nunito_bold</item>
         <item name="textAllCaps">true</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
-        <item name="android:paddingTop">4dp</item>
-        <item name="android:paddingBottom">4dp</item>
-        <item name="android:paddingStart">8dp</item>
-        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingTop">@dimen/padding_4dp</item>
+        <item name="android:paddingBottom">@dimen/padding_4dp</item>
+        <item name="android:paddingStart">@dimen/padding_8dp</item>
+        <item name="android:paddingEnd">@dimen/padding_8dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.AlertDialog.NegativeButton" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
         <item name="shapeAppearance">@style/Theme.WarrantyRoster.TextButton.Appearance</item>
         <item name="android:textColor">@color/dialogButton</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/text_size_14sp</item>
         <item name="android:fontFamily">@font/nunito_bold</item>
         <item name="textAllCaps">true</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
-        <item name="android:paddingTop">4dp</item>
-        <item name="android:paddingBottom">4dp</item>
-        <item name="android:paddingStart">8dp</item>
-        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingTop">@dimen/padding_4dp</item>
+        <item name="android:paddingBottom">@dimen/padding_4dp</item>
+        <item name="android:paddingStart">@dimen/padding_8dp</item>
+        <item name="android:paddingEnd">@dimen/padding_8dp</item>
     </style>
 
 </resources>
