--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -209,6 +209,8 @@
         <item name="android:background">@color/surface</item>
         <item name="android:elevation">@dimen/elevation_3dp</item>
         <item name="titleCentered">true</item>
+        <item name="contentInsetEnd">@dimen/content_inset_12dp</item>
+        <item name="contentInsetStart">@dimen/content_inset_12dp</item>
     </style>
 
     <style name="Theme.WarrantyRoster.Toolbar.Title" parent="Widget.MaterialComponents.TextView">
